# VelvetEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  parse_map.py  static.lcf
include/: defines.hpp
src/velvet/: Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp
src/velvet/core/: Core.cpp  Core.hpp  Engine.cpp  Engine.hpp  Transform.hpp
src/velvet/core/loaders/: ModelLoader.cpp  ModelLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
src/velvet/core/vtx/: VtxDescription.hpp  VtxFormat.hpp
src/velvet/dvd/: DVD.cpp  DVD.hpp
src/velvet/formats/: VObject.hpp  VelvetCommon.hpp
src/velvet/input/: Controller.cpp  Controller.hpp  Input.cpp  Input.hpp
src/velvet/math/: Matrix.cpp  Matrix.hpp  Quaternion.cpp  Quaternion.hpp
